Completely remove meaningless flag